Fixed search button misalignment

--- a/web/css/base.css
+++ b/web/css/base.css
@@ -62,6 +62,9 @@ div#searchbar {
 }
 
 div#searchbar input#searchinput {
+	display: inline-block;
+	vertical-align: top;
+	margin-top: 21px;
 	width: 500px;
 	height: 20px;
 	margin: 21px 0px 21px 10px;
@@ -74,6 +77,9 @@ div#searchbar input#searchinput {
 }
 
 div#searchbar input#searchsubmit {
+	display: inline-block;
+	vertical-align: top;
+	margin-top: 21px;
 	width: 28px;
 	height: 28px;
 	border: 1px solid #888;
